--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/9c0c3e0988.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/landingpage.css">
-        <!-- <link rel="stylesheet" href="css/pageanimation.css"> -->
+        <link rel="stylesheet" href="css/pageanimation.css">
     </head>
     <title>Vishal Reddy | Home</title>
     <body>
