added meta viewport tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://kit.fontawesome.com/9c0c3e0988.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/landingpage.css">
         <link rel="stylesheet" href="css/pageanimation.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <title>Vishal Reddy | Home</title>
     <body>
