--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,8 @@
         <script src="https://kit.fontawesome.com/9c0c3e0988.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/aboutme.css">
         <link rel="stylesheet" href="css/pageanimation.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <title>Vishal Reddy | About Me</title>
     <body>
