updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                    <h3><b>D Vishal Reddy</b></h3>
                    <p>Front End Web Developer | Amrita CSE '23</p>
                     <a href="https://www.instagram.com/vishal.d.reddy/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-                    <a href="www.linkedin.com/in/dvishalreddy02" target="_blank"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/dvishalreddy02" target="_blank"><i class="fab fa-linkedin-in fa-lg"></i></a>
                     <a href="https://github.com/dvishalreddy" target="_blank"><i class="fab fa-github fa-lg"></i></a>
                     <a href="mailto:dudekonda.vishal@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
                     <a href="https://t.me/dvishalreddy" target="_blank"><i class="fab fa-telegram-plane fa-lg"></i></a>
