--- a/aboutme.html
+++ b/aboutme.html
@@ -27,12 +27,11 @@
         <div class="container" id="about">
             <h2>About Me</h2>
             <p>Hey there! I am Vishal a first year undergrad currently pursing Computer Science and Engineering at Amrita 
-                Vishwa Vidhyapeetham, Coimbatore. I'm passionate about bringing my ideas to reality and explore the 
-                world of Web Development.<br><br>
+                Vishwa Vidhyapeetham, Coimbatore. I'm passionate about Web Development.<br><br>
                 I have a decent amount of experience with JavaScript, Bootstrap, jQuery and I'm also familiar with Backend 
                 technologies like Node.js and MongoDB. I have worked on a couple of projects so far all of which can be 
                 found on my <a href="https://github.com/dvishalreddy" target="_blank">Github.</a><br><br>
-                Thank You for taking an intrest in my profile!<br>
+                Thank You for taking an interest in my profile!<br>
                 For official communication shoot me a mail at <a href="mailto:dudekonda.vishal@gmail.com">dudekonda.vishal@gmail.com</a><br>
                 For a causual conversation feel free to ping me on <a href="www.linkedin.com/in/dvishalreddy02" target="_blank">Telegram.</a>
             </p>
